Fix header spacing (#24)

--- a/obsidian.css
+++ b/obsidian.css
@@ -240,6 +240,7 @@
   color: #c8d3f5;
   display: flex;
   align-items: center;
+  white-space: pre-wrap;
 }
 .markdown-preview-view h1 {
   font-size: 2em;
