--- a/src/modules/preview/headings.scss
+++ b/src/modules/preview/headings.scss
@@ -14,6 +14,7 @@
     color: $text-primary;
     display: flex;
     align-items: center;
+    white-space: pre-wrap;
   }
 
   h1 {
